--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,25 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    /* height: 100vh; */
+}
+
+header {
+    height: 150px;
+}
+
 .nav {
     color: blue;
-
+    display: flex;
+    height: 50px;
+    
 }
 
 .topnav {
     background-color: #333;
-    overflow: hidden;
+    /* overflow: hidden; */
+    height: 50px;
+    /* border: 2px solid red; */
 }
 
 .topnav a {
@@ -23,6 +37,52 @@
 }
 
 .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #06a66b;
     color: white;
-  }
+}
+
+.nav-img {
+    width: 100vw;
+    height: 100px;
+    background-image: url(./portfolio\ header\ 2.png);
+    background-position: center;
+    /* border: 2px solid red; */
+}
+
+main {
+    /* flex: 1; */
+    display: flex;
+    flex-direction: column;
+    /* border: 2px solid blue; */
+}
+
+footer {
+    height: 100px;
+    width: 100%;
+    /* border: 1px solid blue; */
+}
+
+.col {
+    /* border: 2px dotted red; */
+}
+
+.row {
+    display:flex
+}
+
+.about-me-img {
+    width:50vw;
+    height: auto;
+    background-position: center;
+}
+
+.about-me-img:hover{
+    filter: grayscale(75%);
+}
+
+.marvel{
+    width:50vw;
+    height: auto;
+    background-position: center;
+
+}
